# Project-Firefly-Server

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml  test_agent_search.py  test_login_register.py
agents/: agent_firefly.py
alembic_files/: env.py
alembic_files/versions/: 2025_07_06_2216-9d2c3e9bef92_initial_migration.py  2025_07_10_2037-2f42d2b423e8_fix_datetime_format.py
core/: config.py  oauth.py  security.py
crud/: crud_conversation.py  crud_token.py  crud_user.py
database/: models.py  session.py
routers/: agent_router.py  dependencies.py  login.py
schemas/: agent.py  token.py  user.py
